<resources>

    <string name="app_name">RoomPersistance</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="age">Age</string>
    <string name="player_role">Player Role</string>
    <string name="birth_place">Birth Place</string>
    <string name="ipl_team">IPL Team</string>
    <string name="debout_year">Debut Year</string>
    <string name="register">Register</string>



</resources>
