<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffa500"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10sp"
            android:elevation="@dimen/cardview_compat_inset_shadow"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:text="Registration Form"
                    android:textAlignment="center"
                    android:textColor="@color/valid"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#dddddd" />


                <EditText
                    android:id="@+id/edt_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext_icon"
                    android:drawableLeft="@drawable/ic_first_name"
                    android:drawablePadding="20dp"
                    android:hint="@string/first_name"
                    android:inputType="textCapCharacters"
                    android:paddingLeft="8dp"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="12dp" />

                <EditText
                    android:id="@+id/edt_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/bg_edittext_icon"
                    android:drawableLeft="@drawable/ic_first_name"
                    android:drawablePadding="20dp"
                    android:hint="@string/last_name"
                    android:inputType="textCapCharacters"
                    android:paddingLeft="8dp"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="12dp" />

                <EditText
                    android:id="@+id/edt_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/bg_edittext_icon"
                    android:drawableLeft="@drawable/ic_country"
                    android:drawablePadding="20dp"
                    android:hint="@string/country"
                    android:inputType="textCapCharacters"
                    android:paddingLeft="8dp"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="12dp" />

                <EditText
                    android:id="@+id/edt_birthPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/bg_edittext_icon"
                    android:drawableLeft="@drawable/ic_birth_place"
                    android:drawablePadding="20dp"
                    android:hint="@string/birth_place"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="8dp"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="12dp" />

                <EditText
                    android:id="@+id/edt_iplteam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/bg_edittext_icon"
                    android:drawableLeft="@drawable/ic_team"
                    android:drawablePadding="20dp"
                    android:hint="@string/ipl_team"
                    android:inputType="text"
                    android:paddingLeft="8dp"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="12dp" />

                <EditText
                    android:id="@+id/edt_debutyear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/bg_edittext_icon"
                    android:drawableLeft="@drawable/ic_first_name"
                    android:drawablePadding="20dp"
                    android:hint="@string/debout_year"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingLeft="8dp"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="12dp" />

                <EditText
                    android:id="@+id/edt_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/bg_edittext_icon"
                    android:drawableLeft="@drawable/ic_age"
                    android:drawablePadding="20dp"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingLeft="8dp"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="12dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#dddddd" />


                <Button
                    android:id="@+id/register_facebookLogin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@color/facebook"
                    android:paddingLeft="20sp"
                    android:text="@string/register"
                    android:textColor="#ffff" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</layout>